Fixed module-related test issues.