@@ -41,8 +41,14 @@
     <jacoco.min.linecoverage>0.80</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0.75</jacoco.min.branchcoverage>
     <javaModulesSurefireArgLine>
-      --add-opens com.generic.core.http.okhttp/com.generic.core.http.okhttp=ALL-UNNAMED
+      --add-opens com.generic.core.http.okhttp/com.generic.core.http.okhttp.implementation=org.junit.platform.commons
+      --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+      --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
+
+      --add-opens com.generic.core.http.okhttp/com.generic.core.http.okhttp=ALL-UNNAMED,org.junit.platform.commons
       --add-opens com.generic.core.http.okhttp/com.generic.core.http.okhttp.implementation=ALL-UNNAMED
+
+      --add-reads com.generic.core.http.okhttp=org.junit.jupiter.api,org.junit.jupiter.params
     </javaModulesSurefireArgLine>
 
     <!-- Enables fail on deprecated API usage. -->
